trunk/Archive2/91/b2c3b5826611f8/output
main.cpp:1:7: error: storage size of 'a' isn't known
 int a[];
       ^
